--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -999,7 +999,7 @@
     <Content Include="Views\Admin\InitializationTasks.cshtml" />
     <Content Include="Views\Admin\Scraping.cshtml" />
     <Content Include="Views\Admin\UploadBackup.cshtml" />
-    <Content Include="Views\Dance\BallroomCompetitionCategories.cshtml" />
+    <Content Include="Views\Home\FAQ.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1090,12 +1090,12 @@
   <!-- **************************************************** -->
   <!-- Build info -->
   <PropertyGroup>
-    <!-- Generate the BuildInfo.config file -->
-    <GenerateBuildInfoConfigFile>True</GenerateBuildInfoConfigFile>
-    <!-- Include server name in build info -->
-    <IncludeServerNameInBuildInfo>True</IncludeServerNameInBuildInfo>
-    <!-- Include the symbols path so Visual Studio can find the matching deployed code when you start debugging. -->
-    <!--<BuildSymbolStorePath><path to symbols></BuildSymbolStorePath>-->
+     <!-- Generate the BuildInfo.config file -->
+     <GenerateBuildInfoConfigFile>True</GenerateBuildInfoConfigFile>
+     <!-- Include server name in build info --> 
+     <IncludeServerNameInBuildInfo>True</IncludeServerNameInBuildInfo> 
+     <!-- Include the symbols path so Visual Studio can find the matching deployed code when you start debugging. -->
+     <!--<BuildSymbolStorePath><path to symbols></BuildSymbolStorePath>-->
   </PropertyGroup>
   <!-- **************************************************** -->
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
