--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -25,7 +25,6 @@ Sample binding in application.config for iisexpress
       
       
     <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" /><section name="msie" type="JavaScriptEngineSwitcher.Msie.Configuration.MsieConfiguration, JavaScriptEngineSwitcher.Msie" /></sectionGroup>
-    <!--<section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core"/> -->
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
@@ -53,23 +52,16 @@ Sample binding in application.config for iisexpress
     <!--customErrors mode="RemoteOnly"></customErrors-->
     <customErrors mode="Off"></customErrors>
 
-    <!-- Glimpse: This can be commented in to add additional data to the Trace tab when using WebForms
-        <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false"/> -->
+    
     <httpModules>
 
-      <!--<add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet"/>-->
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
-
-    <!--<httpHandlers>
-      <add path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet"/>
-    </httpHandlers>-->
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
 
-      <!--<add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode"/>-->
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
@@ -88,7 +80,6 @@ Sample binding in application.config for iisexpress
     </staticContent>
 
     <handlers>      
-    <!--<add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode"/>-->
     <remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /><add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" /></handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <rewrite>
@@ -348,47 +339,32 @@ Sample binding in application.config for iisexpress
       <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService" binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding10" contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortUS" />
     </client>
   </system.serviceModel>
-  <!--<glimpse defaultRuntimePolicy="On" endpointBaseUri="~/Glimpse.axd">
-    <runtimePolicies>
-      <ignoredTypes>
-        <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
-      </ignoredTypes>
-      <uris>
-        <add regex=".*/admin.*"/>
-      </uris>
-    </runtimePolicies>
-  </glimpse>-->
   <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
     <core>
       <css defaultMinifier="MicrosoftAjaxCssMinifier">
         <translators>
-          
-          
-        <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /><add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" /></translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" /><add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
+        </translators>
         <minifiers>
-          
-          
-        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" /></minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
         <fileExtensions>
-          
-          
-        <add fileExtension=".css" assetTypeCode="Css" /><add fileExtension=".less" assetTypeCode="Less" /></fileExtensions>
-        
+            <add fileExtension=".css" assetTypeCode="Css" /><add fileExtension=".less" assetTypeCode="Less" />
+        </fileExtensions>
       <postProcessors>
-					<add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
-				</postProcessors></css>
+        <add name="UrlRewritingCssPostProcessor" type="BundleTransformer.Core.PostProcessors.UrlRewritingCssPostProcessor, BundleTransformer.Core" useInDebugMode="false" />
+      </postProcessors></css>
       <js>
         <minifiers>
-          
-          
-        <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" /></minifiers>
-        
-        
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" /><add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
       <translators>
-					<add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
-				</translators><fileExtensions>
-					<add fileExtension=".js" assetTypeCode="JavaScript" />
-				</fileExtensions></js>
+        <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+      </translators>
+      <fileExtensions>
+        <add fileExtension=".js" assetTypeCode="JavaScript" />
+      </fileExtensions>
+    </js>
     </core>
     <less useNativeMinification="false" ieCompat="true" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
       <jsEngine name="MsieJsEngine" />
