--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -37,6 +37,7 @@ Sample binding in application.config for iisexpress
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="mailAccount" value="music4dance" />
     <add key="mailPassword" value="TX9ES3D0cTDzCeP" />
+    <add key="MigrateDatabaseToLatestVersion" value="true"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
