--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -887,6 +887,7 @@
     <Content Include="Views\Home\FAQ.cshtml" />
     <Content Include="Views\Dance\BallroomCompetitionCategories.cshtml" />
     <Content Include="Views\Dance\weddingdancemusic.cshtml" />
+    <Content Include="Views\Song\AdvancedSearchForm.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
