--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -824,7 +824,7 @@
     <Content Include="Views\Song\Merge.cshtml" />
     <Content Include="Views\Song\SongItems.cshtml" />
     <Content Include="Views\Song\MusicServiceSearch.cshtml" />
-    <Content Include="Views\Admin\Results.cshtml" />
+    <Content Include="Views\Shared\Results.cshtml" />
     <Content Include="Views\Home\Counter.cshtml" />
     <Content Include="Views\Home\CounterHelp.cshtml" />
     <Content Include="Views\Song\BatchMusicService.cshtml" />
