--- a/m4d/packages.config
+++ b/m4d/packages.config
@@ -39,7 +39,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Azure.Search" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search" version="1.1.3" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
@@ -61,13 +61,63 @@
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="2.5.2" targetFramework="net45" />
   <package id="Microsoft.Spatial" version="6.15.0" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net46" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="MsieJavaScriptEngine" version="2.0.1" targetFramework="net46" />
   <package id="MvcDiagnostics" version="5.2.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Owin.Security.Providers" version="1.27" targetFramework="net45" />
+  <package id="Owin.Security.Providers" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.ArcGISOnline" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Asana" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Backlog" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Baidu" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.BattleNet" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Bitbucket" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Box" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Buffer" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Cosign" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.DeviantArt" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Discord" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.DoYouBuzz" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Dropbox" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.EVEOnline" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Fitbit" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Flickr" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Foursquare" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Geni" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.GitHub" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Gitter" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.GooglePlus" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.HealthGraph" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Imgur" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Instagram" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.LinkedIn" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.MyHeritage" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Onshape" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.OpenID" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.OpenIDBase" version="2.1" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Orcid" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.PayPal" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Reddit" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Salesforce" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Shopify" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.SlackProvider" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.SoundCloud" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Spotify" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.StackExchange" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Steam" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.TripIt" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Twitch" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Untappd" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Vimeo" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.VisualStudio" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.VKontakte" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Wargaming" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.WordPress" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Xing" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Yahoo" version="2.11.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Yammer" version="2.11.0" targetFramework="net46" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
